03 Responsive/homework/YuBil/02/css/tablet.css
@font-face {
    font-family: "Intro";
    font-weight: bold;
    src: url("../fonts/Intro.otf");
}

*, 
*:after,
*:before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}
 
body { 
    background-image: url("../tablet.png");
    background-repeat: no-repeat;
    opacity: .3;    
} 

#price,
#smile1,
#share-btn,
.escape,
header > nav { display: none; }

#smile2,
#cup,
#popcorn {
    position: absolute;
    width: 110px;
    height: 110px;
}

#smile2 img { 
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;
}

#smile2 {
    right: 58px;
    bottom: -145px;
}

h1, 
h2, 
p { text-align: center; }

header { 
    margin: 53px auto 20px auto;
    text-align: center;
}

header::before {
    content: "";
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

a { 
    display: inline-block;
    vertical-align: middle;
    text-decoration: none;
    outline: none;
}

img { 
    display: inline-block;
    width: 100%;
    height: 100%;
}

header a#menu {
    width: 27px;
    height: 17px;
}

header a#logo {
    width: 100px;
    height: 24px;
    margin-left: 240px;
    margin-right: 250px; 
}

header a#lang {
    width: 21px;
    height: 15px;
}

section { background: url("../img/bg-white.jpg") -485px -1000px; }

main { 
    padding-top: 82px;
    position: relative;
}

main .mainSlogan { 
    margin-bottom: 54px; 
    font-family: 'Intro', Arial, sans-serif;
    font-size: 24px;
    letter-spacing: 1.3px;
    line-height: 34.5px;
    text-transform: uppercase;
}


main .afterSloganInfo { 
    margin-bottom: 60px; 
    font-family: Arial, sans-serif;
    font-size: 16px;
    letter-spacing: 0.3px;  
    line-height: 32.5px;  
}

footer .footerSlogan {
    font-family: 'Intro', Arial, sans-serif;
    font-size: 21px;
    text-transform: uppercase;
    letter-spacing: 2px;
    line-height: 35px;
}

/* Buttons */
button {
    display: block;
    font-family: 'Intro';
    font-size: 15px;
    color: #fff;
    text-transform: uppercase;
    letter-spacing: 2.4px;
    border: none;
    
    border-radius: 27px;
    box-shadow: 0 15px 68px 0 rgba(0,0,0,0.2);
    padding: 18px 45px;
    margin: 20px auto;
}

button.main-btn { 
    background-color: #27D481; 
    margin-bottom: 100px;
}

button.footer-btn { background-color: #FF634E; }
/* END Buttons */

footer { 
    background-image: url("../img/bg-green.jpg");
    background-size: cover;
    padding-top: 61px;
    padding-bottom: 35px;
    color: #fff;
}
        
/* Video styling */
.video-wrapper {
    margin-top: 47px;
    margin-bottom: 62px;
    padding: 0 26px;
}

figure {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    width: 100%;
    height: 0;
}

iframe {
    height: 100%;
    width: 100%;
    position: absolute;
    left: 0;
    top: 0;
    border-radius: 7px;
}
/* END Video styling */

